human-intervention-logs/io.netty:netty-pkitesting:4.2.2.Final/gradle-test/gradle-test-2026-05-05T02-29-39-238280Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.netty:netty-pkitesting:4.2.2.Final
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 11 busy and 5 incompatible and 322 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :checkTestTimeoutAnnotations
> Task :tck-test-support:classes UP-TO-DATE
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:14: error: cannot find symbol
import java.security.AsymmetricKey;
                    ^
  symbol:   class AsymmetricKey
  location: package java.security
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:51: error: cannot find symbol
    public static final class MlDsaPublicKey implements PublicKey, AsymmetricKey {
                                                                   ^
  symbol:   class AsymmetricKey
  location: class CertificateBuilderTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:52: error: method does not override or implement a method from a supertype
        @Override
        ^
Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:14: error: cannot find symbol
  import java.security.AsymmetricKey;
                      ^
    symbol:   class AsymmetricKey
    location: package java.security
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:51: error: cannot find symbol
      public static final class MlDsaPublicKey implements PublicKey, AsymmetricKey {
                                                                     ^
    symbol:   class AsymmetricKey
    location: class CertificateBuilderTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/tests/src/io.netty/netty-pkitesting/4.2.2.Final/src/test/java/io_netty/netty_pkitesting/CertificateBuilderTest.java:52: error: method does not override or implement a method from a supertype
          @Override
          ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 10s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5880-29eaea7f/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.netty:netty-pkitesting:4.2.2.Final failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
9 actionable tasks: 1 executed, 8 up-to-date
